...
                                  ),
                            ),
                          ] else ...[
                            SizedBox(width: gap),
                            context.appDecoration.wrapInteractive(
                              child: IconButton(
                                key: const ValueKey('save_request_button'),
                                icon: Icon(
                                  tab.collectionNodeId != null
                                      ? Icons.save
                                      : Icons.save_as,
                                  color: theme.colorScheme.secondary,
                                  size: iconSize,
...
